--- a/client/src/app/pages/landing-page/landing-page.component.scss
+++ b/client/src/app/pages/landing-page/landing-page.component.scss
@@ -30,10 +30,10 @@ html, body, app-root, app-landing-page, main {
   height: 100%;
   width: 100%;
   overflow: hidden;
-  // display: block;
+  display: block;
   margin: 0;
   padding: 0;
-  // box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 main {
