--- a/client/src/app/pages/about-page/about-page.component.html
+++ b/client/src/app/pages/about-page/about-page.component.html
@@ -22,7 +22,7 @@
       <h3>Team & Contributors</h3>
       <ul>
         <li><strong>2244082 – Omar Benzekri</strong></li>
-        <li><strong>213673 – Ireina Hedad</strong></li>
+        <li><strong>2213673 – Ireina Hedad</strong></li>
         <li><strong>2068795 – Samuel Kouakou</strong></li>
         <li><strong>2077446 – Félix Lamarche</strong></li>
         <li><strong>2075826 – Mohamed Lamine Gning</strong></li>
@@ -40,7 +40,10 @@
   </div>
 
   <footer>
-    <img src="assets/beyondGPA.png" alt="Logo" class="logo">
+    <div class="about">
+      <img src="assets/beyondGPA.png" alt="Logo" class="logo">
+      <span class="tooltip-text">A CSS King Original</span>
+    </div>
     <p>&copy; 2025 BeyondGPA. All rights reserved.</p>
   </footer>
 </main>
