--- a/client/src/app/components/viz-transition/viz-transition.component.scss
+++ b/client/src/app/components/viz-transition/viz-transition.component.scss
@@ -2,7 +2,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 6rem 2rem;
+  padding: 6rem 6%;
   color: var(--text-color);
   text-align: center;
   animation: fadeIn 1s ease-in;
@@ -32,4 +32,11 @@
 @keyframes fadeIn {
   from { opacity: 0; transform: translateY(40px); }
   to { opacity: 1; transform: translateY(0); }
+}
+
+
+@media (max-width: 768px) {
+  .transition-card {
+    padding: 1rem;
+  }
 }
