--- a/client/src/app/pages/about-page/about-page.component.scss
+++ b/client/src/app/pages/about-page/about-page.component.scss
@@ -6,7 +6,7 @@ main {
 
 .timeline-container {
   position: relative;
-  padding: 0 30px;
+  padding: 0 6%;
   margin: 0 auto;
 }
 
@@ -21,6 +21,7 @@ main {
   display: flex;
   flex-direction: column;
   gap: 10px;
+  animation: fadeIn 1s ease-in;
 
   &:hover {
     box-shadow: 0 6px 15px rgba(0, 0, 0, 0.2);
@@ -66,4 +67,31 @@ footer {
     font-size: 14px;
     text-align: center;
   }
+}
+
+@keyframes fadeIn {
+  from { opacity: 0; transform: translateY(40px); }
+  to { opacity: 1; transform: translateY(0); }
+}
+
+.tooltip-text {
+  visibility: hidden;
+  width: 100px;
+  background-color: #0000008a;
+  color: white;
+  font-size: 10px;
+  text-align: center;
+  border-radius: 5px;
+  padding: 5px;
+  position: absolute;
+  z-index: 1;
+  bottom: 105%;
+  margin-left: -73px;
+  opacity: 0;
+  transition: opacity 0.5s;
+}
+
+.about:hover .tooltip-text {
+  visibility: visible;
+  opacity: 1;
 }
