--- a/client/src/app/pages/main-page/main-page.component.html
+++ b/client/src/app/pages/main-page/main-page.component.html
@@ -44,7 +44,10 @@
   </div>
 
   <footer>
-    <img src="assets/beyondGPA.png" alt="Logo" class="logo">
+    <div class="about">
+      <img src="assets/beyondGPA.png" alt="Logo" class="logo">
+      <span class="tooltip-text">A CSS King Original</span>
+    </div>
     <p>&copy; 2025 BeyondGPA. All rights reserved.</p>
   </footer>
 </main>
