feat: demo adjustments

--- a/client/src/app/pages/main-page/main-page.component.html
+++ b/client/src/app/pages/main-page/main-page.component.html
@@ -10,8 +10,8 @@
 
     <app-viz-transition [title]="Transitions[0].title" [text]="Transitions[0].text"></app-viz-transition>
 
-    <app-viz-section sectionId="2." section="Bar Chart: Impact of Academic Results on Starting Salary"
-      description="This visualization uses a bar chart to examine the relationship between degree classification and starting salary. By comparing average earnings across different academic result categories, the visual reveals whether stronger academic performance correlates with higher initial pay in early career stages."
+    <app-viz-section sectionId="2." section="Scatter Plots: Impact of Academic Results on Starting Salary"
+      description="This visualization uses scatter plots to examine the relationship between degree classification and starting salary. By comparing average earnings across different academic result categories, the visual reveals whether stronger academic performance correlates with higher initial pay in early career stages."
       [questions]="Questions2" [answers]="Answers2">
       <app-visual-2></app-visual-2>
     </app-viz-section>
