--- a/client/src/app/components/header/header.component.html
+++ b/client/src/app/components/header/header.component.html
@@ -1,7 +1,7 @@
 <header class="header">
     <div class="header-content">
       <div>
-        <a href="/home" class="header-link">
+        <a href="/" class="header-link">
           <h1 class="title">Beyond<span>GPA</span></h1>
         </a>
         <p class="subtitle">Redefining Career Success Metrics</p>
